--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
   </div>
 
   <p id="action-message">Make your move.</p>
-  <script src="java/index.js" charset="UTF-8"></script>
+  <script src="index.js" charset="UTF-8"></script>
 </body>
 </html>
