--- a/index.html
+++ b/index.html
@@ -1,40 +1,49 @@
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rock paper scissors</title>
-  <link rel="stylesheet" href="index.css">
-  <link href="https://fonts.googleapis.com/css2?family=Asap:wght@400;500;700&display=swap" rel="stylesheet">
-</head>
-<body>
-  <header>
-    <h1> Rock Paper Scissors</h1>
-  </header>
-  
-  <div class="scoreBoard">
-    <div id= "user-label" class="badge">USER</div> 
-    <div id= "comp-label" class="badge">COMP</div>
-    <span id= "user-score">0</span> :
-    <span id= "comp-score">0</span>
-  </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rock paper scissors</title>
+    <link rel="stylesheet" href="index.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Asap:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header>
+      <h1>Rock Paper Scissors</h1>
+    </header>
 
-  <div class="result"> 
-    <p> Paper covers rock. You win!</p>
-  </div>
+    <div class="scoreBoard">
+      <div id="user-label" class="badge">USER</div>
+      <div id="comp-label" class="badge">COMP</div>
+      <span id="user-score">0</span> :
+      <span id="comp-score">0</span>
+    </div>
 
-  <div class="choices">
-    <div class="choice" id="r">
-      <img src="https://img.icons8.com/color/48/000000/hand-rock.png" alt=""/>
+    <div class="result">
+      <p>Paper covers rock. You win!</p>
     </div>
-    <div class="choice" id="p">
-      <img src="https://img.icons8.com/color/48/000000/hand.png" alt=""/>
-    </div>
-    <div class="choice" id="s">  
-      <img src="https://img.icons8.com/color/48/000000/hand-scissors.png" alt=""/>
-    </div>
-  </div>
 
-  <p id="action-message">Make your move.</p>
-  <script src="index.js" charset="UTF-8"></script>
-</body>
+    <div class="choices">
+      <div class="choice" id="r">
+        <img
+          src="https://img.icons8.com/color/48/000000/hand-rock.png"
+          alt=""
+        />
+      </div>
+      <div class="choice" id="p">
+        <img src="https://img.icons8.com/color/48/000000/hand.png" alt="" />
+      </div>
+      <div class="choice" id="s">
+        <img
+          src="https://img.icons8.com/color/48/000000/hand-scissors.png"
+          alt=""
+        />
+      </div>
+    </div>
+
+    <p id="action-message">Make your move.</p>
+    <script src="index.js" charset="UTF-8"></script>
+  </body>
 </html>
